# talos_simulation

talos_controller_configuration_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_controller_configuration_gazebo/config/: joint_trajectory_controllers.yaml  walking_controller.yaml  walking_params.yaml
talos_controller_configuration_gazebo/launch/: default_controllers.launch  full_body_position_controllers.launch  upper_body_position_controllers.launch  walking_controller.launch
talos_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_gazebo/launch/: talos_full_gazebo.launch  talos_full_small_office_gazebo.launch  talos_gazebo.launch  talos_lower_body_spawn.launch  talos_spawn.launch  tor_full_gazebo.launch  tor_full_spawn.launch  tor_lower_body_gazebo.launch
talos_gazebo/models/reemc_full/: model.urdf
talos_gazebo/models/stairs/: model.config  stairs.sdf
talos_gazebo/models/stairs_10/: model.config  stairs_10.sdf
talos_gazebo/models/stairs_talos/: model.config  stairs_talos.sdf
talos_gazebo/models/stairs_talos_2/: model.config  stairs_talos_2.sdf
talos_gazebo/worlds/: CMakeLists.txt  drc_practice_task_1.world  drc_practice_task_4.world  empty.world  only_panel_optimal-grab.world  srcsim_only_solar_array.world  unique_task2.world  vrc_final_task1.world  vrc_task_2_uneven_start.world
talos_hardware_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_hardware_gazebo/config/: pids.yaml  talos_full_pal_hardware_gazebo_config.yaml  talos_lower_body_torso_head_pal_hardware_gazebo_config.yaml
talos_hardware_gazebo/config/sensors/: arm_left.yaml  arm_right.yaml  leg_left.yaml  leg_right.yaml  torso.yaml
talos_simulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
tor_gazebo/: CMakeLists.txt  package.xml
tor_gazebo/launch/: tor_full_gazebo.launch  tor_full_spawn.launch  tor_gazebo.launch  tor_lower_body_gazebo.launch  tor_lower_body_spawn.launch  tor_spawn.launch
tor_gazebo/worlds/: empty.world
tor_hardware_gazebo/: CMakeLists.txt  package.xml
tor_hardware_gazebo/config/: pids.yaml  tor_lower_body_pal_hardware_gazebo_config.yaml  tor_pal_hardware_gazebo_config.yaml
tor_simulation/: CMakeLists.txt  package.xml
