<?xml version="1.0"?>
<package>
  <name>talos_controller_configuration_gazebo</name>
  <version>0.0.9</version>
  <description>The talos_controller_configuration_gazebo package</description>

  <maintainer email="hilario@todo.todo">hilario</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
  
</package>
