<?xml version="1.0"?>
<package>
  <name>talos_controller_configuration_gazebo</name>
  <version>0.0.9</version>
  <description>The talos_controller_configuration_gazebo package</description>

  <maintainer email="hilario.tome@pal-robotics.com">hilario</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
  
</package>
