<?xml version="1.0"?>
<package format="3">
  <name>talos_gazebo</name>
  <version>0.2.3</version>
  <description>The talos_gazebo package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>
  <maintainer email="ilenia.perrella@pal-robotics.com">Ilenia Perrella</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>talos_controller_configuration_gazebo</exec_depend>
  <exec_depend>talos_hardware_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
