<?xml version="1.0"?>
<package>
  <name>talos_hardware_gazebo</name>
  <version>0.0.0</version>
  <description>The talos_hardware_gazebo package</description>

  <maintainer email="hilario@todo.todo">hilario</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pal_hardware_gazebo</build_depend>

  <run_depend>pal_hardware_gazebo</run_depend>

  <export>
  </export>
</package>
